@@ -426,12 +426,13 @@ format.POSIXct <- function(x, format = "", tz = "", usetz = FALSE, ...)
 
 ## keep in sync with  print.Date()  in ./dates.R
 print.POSIXct <-
-print.POSIXlt <- function(x, tz = "", usetz = TRUE, max = NULL, ...)
+print.POSIXlt <- function(x, tz = "", usetz = TRUE, max = NULL,
+                          digits = getOption("digits.secs"), ...)
 {
     if(is.null(max)) max <- getOption("max.print", 9999L)
     FORM <- if(missing(tz))
-         function(z) format(z,          usetz = usetz)
-        else function(z) format(z, tz = tz, usetz = usetz)
+             function(z) format(z,        usetz=usetz, digits=digits)
+        else function(z) format(z, tz=tz, usetz=usetz, digits=digits)
     if(max < length(x)) {
     print(FORM(x[seq_len(max)]), max=max+1, ...)
     cat(" [ reached 'max' / getOption(\"max.print\") -- omitted",
